Fix overflow in codemirror input

--- a/less/app.less
+++ b/less/app.less
@@ -247,7 +247,7 @@ pre, code { padding: 0; margin: 0; font-family:  Menlo !important; }
 
     .CodeMirror {
       width: 100%;
-      height: 420px;
+      height: 400px;
       background: none;
     }
   }
